--- a/task1.html
+++ b/task1.html
@@ -6,18 +6,30 @@
     <link rel="stylesheet" href="task1.css">
 </head>
 <body>
- <div class="table"><table width="100%">
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
-     <tr><td>блаблабла</td><td>блаблабла</td><td>блаблабла</td></tr>
- </table></div>
- <br><br><br>
+ <div class="tablebg">
+     <div class="table">
+       <div class="grid1">
+         <div class="rowhead">blabla</div>
+         <div class="row">blabla</div>
+         <div class="row">blabla</div>
+         <div class="row">blabla</div>
+       </div>
+       <div class="grid2">
+           <div class="rowhead">bla</div>
+           <div class="row">bla</div>
+           <div class="row">bla</div>
+           <div class="row">bla</div>
+       </div>
+       <div class="grid3">
+           <div class="rowhead">blablabla</div>
+           <div class="row">blablabla</div>
+           <div class="row">blablabla</div>
+           <div class="row">blablabla</div>
+       </div>
+     </div>
+ </div>
+ <br>
  <div class="floor"></div>
- <div class="header"></div>
+ <div class="header"><div class="text">Table</div><a href="#"><button></button></a></div>
 </body>
 </html>
